--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.FULLSCREEN">
-        <activity android:name=".MainActivity" android:screenOrientation="portrait">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="portrait">
         </activity>
 
         <!-- 设置环信应用的AppKey -->
@@ -55,19 +57,24 @@
             </intent-filter>
         </receiver>
 
-        <activity android:name=".view.SplashActivity" android:screenOrientation="portrait">
+        <activity
+            android:name=".view.SplashActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".view.LoginActivity" android:launchMode="singleTask"
-                  android:screenOrientation="portrait"
-            />
-        <activity android:name=".view.activity.RegistActivity"
-            android:screenOrientation="portrait"
-            />
+        <activity
+            android:name=".view.LoginActivity"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".view.activity.RegistActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".view.activity.AddFriendActivity">
+        </activity>
     </application>
 
 </manifest>
